--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
         "@types/react": "^18.2.12",
         "@types/react-dom": "^18.2.5",
         "axios": "^1.4.0",
+        "dotenv": "^16.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
+        "sass": "^1.66.1",
         "styled-components": "^6.0.0-rc.3",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
