--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "dotenv": "^16.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.16.0",
         "react-scripts": "5.0.1",
         "sass": "^1.66.1",
         "styled-components": "^6.0.0-rc.3",
