[CLIENT][DEV] - Dark them working correctly.

--- a/client/src/config.json
+++ b/client/src/config.json
@@ -21,5 +21,12 @@
         "icon": "note",
         "url": "notes"
         }
+    ],
+    "nav-bar-setting": [
+        {
+            "title": "Settings",
+            "icon": "page_info",
+            "url": "settings"
+        }
     ]
 }
