--- a/client/package.json
+++ b/client/package.json
@@ -49,10 +49,12 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^7.5.2",
     "@storybook/addon-essentials": "^7.0.22",
     "@storybook/addon-interactions": "^7.0.22",
     "@storybook/addon-links": "^7.0.22",
     "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-themes": "^7.5.2",
     "@storybook/blocks": "^7.0.22",
     "@storybook/preset-create-react-app": "^7.0.22",
     "@storybook/react": "^7.0.22",
