[DEV] - Added dropdown option and item component.

--- a/client/src/config.json
+++ b/client/src/config.json
@@ -28,5 +28,6 @@
             "icon": "page_info",
             "url": "settings"
         }
-    ]
+    ],
+    "icons": "material-symbols-rounded"
 }
