--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,10 @@
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
-        "mysql": "^2.18.1",
+        "mongodb": "^6.3.0",
         "nodemon": "^3.0.1"
     }
 }
